[gd_scene load_steps=2 format=3 uid="uid://cplomuox6ox26"]

[ext_resource type="Script" uid="uid://d3cpm4vctttx0" path="res://enemies/components/projectile_spawner/projectile_spawner.gd" id="1_hs15j"]

[node name="ProjectileSpawner" type="Node2D"]
script = ExtResource("1_hs15j")

[node name="FlashPoint" type="Node2D" parent="."]

[node name="FlashPointAnimatedSprite2D" type="AnimatedSprite2D" parent="FlashPoint"]
unique_name_in_owner = true

[node name="SpawnPoint" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
